--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,10 +18,24 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          components: rustfmt, clippy
+      - name: Install Rust (with retry)
+        run: |
+          echo "Installing Rust toolchain with retry logic..."
+          for i in {1..3}; do
+            echo "Attempt $i of 3"
+            if curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable --profile minimal --component rustfmt --component clippy; then
+              echo "Rust installation successful"
+              break
+            else
+              echo "Rust installation failed, attempt $i"
+              if [ $i -eq 3 ]; then
+                echo "All attempts failed"
+                exit 1
+              fi
+              sleep 30
+            fi
+          done
+          source ~/.cargo/env
       
       - name: Install cargo-audit
         run: cargo install cargo-audit
@@ -56,10 +70,24 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          components: rustfmt, clippy
+      - name: Install Rust (with retry)
+        run: |
+          echo "Installing Rust toolchain with retry logic..."
+          for i in {1..3}; do
+            echo "Attempt $i of 3"
+            if curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable --profile minimal --component rustfmt --component clippy; then
+              echo "Rust installation successful"
+              break
+            else
+              echo "Rust installation failed, attempt $i"
+              if [ $i -eq 3 ]; then
+                echo "All attempts failed"
+                exit 1
+              fi
+              sleep 30
+            fi
+          done
+          source ~/.cargo/env
       
       - name: Cache dependencies
         uses: actions/cache@v4
@@ -100,10 +128,24 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          components: rustfmt, clippy
+      - name: Install Rust (with retry)
+        run: |
+          echo "Installing Rust toolchain with retry logic..."
+          for i in {1..3}; do
+            echo "Attempt $i of 3"
+            if curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable --profile minimal --component rustfmt --component clippy; then
+              echo "Rust installation successful"
+              break
+            else
+              echo "Rust installation failed, attempt $i"
+              if [ $i -eq 3 ]; then
+                echo "All attempts failed"
+                exit 1
+              fi
+              sleep 30
+            fi
+          done
+          source ~/.cargo/env
       
       - name: Cache dependencies
         uses: actions/cache@v4
@@ -130,10 +172,24 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          components: rustfmt, clippy
+      - name: Install Rust (with retry)
+        run: |
+          echo "Installing Rust toolchain with retry logic..."
+          for i in {1..3}; do
+            echo "Attempt $i of 3"
+            if curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable --profile minimal --component rustfmt --component clippy; then
+              echo "Rust installation successful"
+              break
+            else
+              echo "Rust installation failed, attempt $i"
+              if [ $i -eq 3 ]; then
+                echo "All attempts failed"
+                exit 1
+              fi
+              sleep 30
+            fi
+          done
+          source ~/.cargo/env
       
       - name: Install wasm-pack
         uses: jetli/wasm-pack-action@v0.4.0
@@ -182,10 +238,24 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          components: rustfmt, clippy
+      - name: Install Rust (with retry)
+        run: |
+          echo "Installing Rust toolchain with retry logic..."
+          for i in {1..3}; do
+            echo "Attempt $i of 3"
+            if curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable --profile minimal --component rustfmt --component clippy; then
+              echo "Rust installation successful"
+              break
+            else
+              echo "Rust installation failed, attempt $i"
+              if [ $i -eq 3 ]; then
+                echo "All attempts failed"
+                exit 1
+              fi
+              sleep 30
+            fi
+          done
+          source ~/.cargo/env
       
       - name: Cache dependencies
         uses: actions/cache@v4
@@ -208,10 +278,24 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          components: rustfmt, clippy
+      - name: Install Rust (with retry)
+        run: |
+          echo "Installing Rust toolchain with retry logic..."
+          for i in {1..3}; do
+            echo "Attempt $i of 3"
+            if curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable --profile minimal --component rustfmt --component clippy; then
+              echo "Rust installation successful"
+              break
+            else
+              echo "Rust installation failed, attempt $i"
+              if [ $i -eq 3 ]; then
+                echo "All attempts failed"
+                exit 1
+              fi
+              sleep 30
+            fi
+          done
+          source ~/.cargo/env
       
       - name: Cache dependencies
         uses: actions/cache@v4
@@ -245,10 +329,24 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          components: rustfmt, clippy
+      - name: Install Rust (with retry)
+        run: |
+          echo "Installing Rust toolchain with retry logic..."
+          for i in {1..3}; do
+            echo "Attempt $i of 3"
+            if curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable --profile minimal --component rustfmt --component clippy; then
+              echo "Rust installation successful"
+              break
+            else
+              echo "Rust installation failed, attempt $i"
+              if [ $i -eq 3 ]; then
+                echo "All attempts failed"
+                exit 1
+              fi
+              sleep 30
+            fi
+          done
+          source ~/.cargo/env
       
       - name: Cache dependencies
         uses: actions/cache@v4
@@ -293,10 +391,24 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          components: rustfmt, clippy
+      - name: Install Rust (with retry)
+        run: |
+          echo "Installing Rust toolchain with retry logic..."
+          for i in {1..3}; do
+            echo "Attempt $i of 3"
+            if curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable --profile minimal --component rustfmt --component clippy; then
+              echo "Rust installation successful"
+              break
+            else
+              echo "Rust installation failed, attempt $i"
+              if [ $i -eq 3 ]; then
+                echo "All attempts failed"
+                exit 1
+              fi
+              sleep 30
+            fi
+          done
+          source ~/.cargo/env
       
       - name: Cache dependencies
         uses: actions/cache@v4
@@ -337,10 +449,24 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          components: rustfmt, clippy
+      - name: Install Rust (with retry)
+        run: |
+          echo "Installing Rust toolchain with retry logic..."
+          for i in {1..3}; do
+            echo "Attempt $i of 3"
+            if curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable --profile minimal --component rustfmt --component clippy; then
+              echo "Rust installation successful"
+              break
+            else
+              echo "Rust installation failed, attempt $i"
+              if [ $i -eq 3 ]; then
+                echo "All attempts failed"
+                exit 1
+              fi
+              sleep 30
+            fi
+          done
+          source ~/.cargo/env
       
       - name: Verify Rust installation
         run: |
@@ -419,10 +545,24 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          components: rustfmt, clippy
+      - name: Install Rust (with retry)
+        run: |
+          echo "Installing Rust toolchain with retry logic..."
+          for i in {1..3}; do
+            echo "Attempt $i of 3"
+            if curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable --profile minimal --component rustfmt --component clippy; then
+              echo "Rust installation successful"
+              break
+            else
+              echo "Rust installation failed, attempt $i"
+              if [ $i -eq 3 ]; then
+                echo "All attempts failed"
+                exit 1
+              fi
+              sleep 30
+            fi
+          done
+          source ~/.cargo/env
       
       - name: Verify Rust installation
         run: |
@@ -485,10 +625,24 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          components: rustfmt, clippy
+      - name: Install Rust (with retry)
+        run: |
+          echo "Installing Rust toolchain with retry logic..."
+          for i in {1..3}; do
+            echo "Attempt $i of 3"
+            if curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable --profile minimal --component rustfmt --component clippy; then
+              echo "Rust installation successful"
+              break
+            else
+              echo "Rust installation failed, attempt $i"
+              if [ $i -eq 3 ]; then
+                echo "All attempts failed"
+                exit 1
+              fi
+              sleep 30
+            fi
+          done
+          source ~/.cargo/env
       
       - name: Cache dependencies
         uses: actions/cache@v4
