--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -4,6 +4,11 @@ on:
   pull_request:
     branches: [ main, develop ]
 
+permissions:
+  contents: read
+  pull-requests: write
+  issues: write
+
 env:
   CARGO_TERM_COLOR: always
 
@@ -17,14 +22,23 @@ jobs:
       - uses: actions/checkout@v4
       
       - name: Install Rust (with retry)
-        uses: nick-fields/retry@v3
-        with:
-          timeout_minutes: 10
-          max_attempts: 3
-          retry_on: error
-          command: |
-            rustup toolchain install stable --profile minimal --no-self-update
-            rustup component add rustfmt clippy
+        run: |
+          echo "Installing Rust toolchain with retry logic..."
+          for i in {1..3}; do
+            echo "Attempt $i of 3"
+            if curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable --profile minimal --component rustfmt --component clippy; then
+              echo "Rust installation successful"
+              break
+            else
+              echo "Rust installation failed, attempt $i"
+              if [ $i -eq 3 ]; then
+                echo "All attempts failed"
+                exit 1
+              fi
+              sleep 30
+            fi
+          done
+          source ~/.cargo/env
       
       - name: Cache dependencies
         uses: actions/cache@v4
@@ -58,13 +72,23 @@ jobs:
       - uses: actions/checkout@v4
       
       - name: Install Rust (with retry)
-        uses: nick-fields/retry@v3
-        with:
-          timeout_minutes: 10
-          max_attempts: 3
-          retry_on: error
-          command: |
-            rustup toolchain install stable --profile minimal --no-self-update
+        run: |
+          echo "Installing Rust toolchain with retry logic..."
+          for i in {1..3}; do
+            echo "Attempt $i of 3"
+            if curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable --profile minimal --component rustfmt --component clippy; then
+              echo "Rust installation successful"
+              break
+            else
+              echo "Rust installation failed, attempt $i"
+              if [ $i -eq 3 ]; then
+                echo "All attempts failed"
+                exit 1
+              fi
+              sleep 30
+            fi
+          done
+          source ~/.cargo/env
       
       - name: Install cargo-audit
         run: cargo install cargo-audit
@@ -110,13 +134,23 @@ jobs:
       - uses: actions/checkout@v4
       
       - name: Install Rust (with retry)
-        uses: nick-fields/retry@v3
-        with:
-          timeout_minutes: 10
-          max_attempts: 3
-          retry_on: error
-          command: |
-            rustup toolchain install stable --profile minimal --no-self-update
+        run: |
+          echo "Installing Rust toolchain with retry logic..."
+          for i in {1..3}; do
+            echo "Attempt $i of 3"
+            if curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable --profile minimal --component rustfmt --component clippy; then
+              echo "Rust installation successful"
+              break
+            else
+              echo "Rust installation failed, attempt $i"
+              if [ $i -eq 3 ]; then
+                echo "All attempts failed"
+                exit 1
+              fi
+              sleep 30
+            fi
+          done
+          source ~/.cargo/env
       
       - name: Install cargo-tarpaulin
         run: cargo install cargo-tarpaulin
@@ -160,13 +194,23 @@ jobs:
       - uses: actions/checkout@v4
       
       - name: Install Rust (with retry)
-        uses: nick-fields/retry@v3
-        with:
-          timeout_minutes: 10
-          max_attempts: 3
-          retry_on: error
-          command: |
-            rustup toolchain install stable --profile minimal --no-self-update
+        run: |
+          echo "Installing Rust toolchain with retry logic..."
+          for i in {1..3}; do
+            echo "Attempt $i of 3"
+            if curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable --profile minimal --component rustfmt --component clippy; then
+              echo "Rust installation successful"
+              break
+            else
+              echo "Rust installation failed, attempt $i"
+              if [ $i -eq 3 ]; then
+                echo "All attempts failed"
+                exit 1
+              fi
+              sleep 30
+            fi
+          done
+          source ~/.cargo/env
       
       - name: Cache dependencies
         uses: actions/cache@v4
@@ -197,13 +241,23 @@ jobs:
       - uses: actions/checkout@v4
       
       - name: Install Rust (with retry)
-        uses: nick-fields/retry@v3
-        with:
-          timeout_minutes: 10
-          max_attempts: 3
-          retry_on: error
-          command: |
-            rustup toolchain install stable --profile minimal --no-self-update
+        run: |
+          echo "Installing Rust toolchain with retry logic..."
+          for i in {1..3}; do
+            echo "Attempt $i of 3"
+            if curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable --profile minimal --component rustfmt --component clippy; then
+              echo "Rust installation successful"
+              break
+            else
+              echo "Rust installation failed, attempt $i"
+              if [ $i -eq 3 ]; then
+                echo "All attempts failed"
+                exit 1
+              fi
+              sleep 30
+            fi
+          done
+          source ~/.cargo/env
       
       - name: Install wasm-pack
         uses: jetli/wasm-pack-action@v0.4.0
@@ -252,8 +306,24 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
+      - name: Install Rust (with retry)
+        run: |
+          echo "Installing Rust toolchain with retry logic..."
+          for i in {1..3}; do
+            echo "Attempt $i of 3"
+            if curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable --profile minimal --component rustfmt --component clippy; then
+              echo "Rust installation successful"
+              break
+            else
+              echo "Rust installation failed, attempt $i"
+              if [ $i -eq 3 ]; then
+                echo "All attempts failed"
+                exit 1
+              fi
+              sleep 30
+            fi
+          done
+          source ~/.cargo/env
       
       - name: Cache dependencies
         uses: actions/cache@v4
